<resources>
    <string name="app_name">Shy7lo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    
    <!--landing-->
    <string name="select_country">Select Country</string>
    <string name="select_language">Select Language</string>
    <string name="language_english">English</string>
    <string name="language_arabic">Arabic</string>
    <string name="next">Next</string>
</resources>
