<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_landing"
    android:orientation="vertical"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_landing_pop"
        android:orientation="vertical"
        android:padding="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/landing_top_height"
            android:background="@drawable/landing_top"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_arabic" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fadeScrollbars="false"
            android:fadingEdgeLength="0dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSelectLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/seperator_margin"
                    android:layout_marginTop="@dimen/seperator_margin"
                    android:gravity="center"
                    android:text="@string/select_language"
                    android:textColor="@color/black"
                    android:textSize="@dimen/h1"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp">

                    <Button
                        android:id="@+id/btnEnglish"
                        android:layout_width="@dimen/btn_width"
                        android:layout_height="@dimen/btn_height"
                        android:background="@drawable/btn_round_black"
                        android:text="@string/language_english"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btnArabic"
                        android:layout_width="@dimen/btn_width"
                        android:layout_height="@dimen/btn_height"
                        android:textAllCaps="false"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/btn_round_black"
                        android:text="@string/language_arabic"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/seperator_margin"
                    android:layout_marginTop="@dimen/seperator_margin"
                    android:background="@drawable/seprator" />

                <TextView
                    android:id="@+id/tvSelectCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/select_country"
                    android:textColor="@color/black"
                    android:textSize="@dimen/h1"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btnSaudi"
                        android:layout_width="@dimen/flag_width"
                        android:layout_height="@dimen/flag_height"
                        android:background="@drawable/saudi_arebia" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="10dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnDubai"
                        android:layout_width="@dimen/flag_width"
                        android:layout_height="@dimen/flag_height"
                        android:background="@drawable/dubai" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="10dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnQatar"
                        android:layout_width="@dimen/flag_width"
                        android:layout_height="@dimen/flag_height"
                        android:background="@drawable/qatar" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btnOman"
                        android:layout_width="@dimen/flag_width"
                        android:layout_height="@dimen/flag_height"
                        android:background="@drawable/oman" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="10dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnKuwait"
                        android:layout_width="@dimen/flag_width"
                        android:layout_height="@dimen/flag_height"
                        android:background="@drawable/kuwait" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="10dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnBahrain"
                        android:layout_width="@dimen/flag_width"
                        android:layout_height="@dimen/flag_height"
                        android:background="@drawable/bahrain" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>


        <RelativeLayout
            android:id="@+id/rltNext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/landing_bottom_height"
            android:background="@drawable/landing_bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <ImageButton
                android:id="@+id/ibNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@null"
                android:src="@drawable/right_arrow" />
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>